# portkey-ai-shadow-optic

./: .env.example  .gitignore  HACKATHON_SUBMISSION.md  LATEST_MODELS_JAN_2026.md  PRODUCTION_READY.md  README.md  package-lock.json  pyproject.toml  requirements.txt  test_imports.py
configs/: production-config.json  shadow-config.json
data/: prompt_genie_test.db
docs/: AGENTIC_METADATA.md  ARCHITECTURE.md  DSPY_INTEGRATION.md  ENHANCEMENTS.md  FUTURE_ENHANCEMENTS.md  HACKATHON_SUBMISSION.md  IMPLEMENTATION_GUIDE.md  LATEST_MODELS_JAN_2026.md  P2_IMPLEMENTATION_ROADMAP.md  PORTKEY_MODEL_CATALOG.md  PRODUCTION_READY.md  PROMPT_GENIE_INTEGRATION.md  UNIFIED_DSPY_AGENTIC_ENHANCEMENTS.md
docs/diagrams/: architecture.mmd  pipeline-flow.mmd  sequence-flow.mmd  workflow-activities.mmd
infrastructure/: Dockerfile  docker-compose.yml
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/dashboards/: shadow-optic.json
monitoring/grafana/provisioning/datasources/: datasources.yml
scripts/: README.md  agentic_dspy_demo.py  bootstrap_portkey.py  complete_e2e_flow.py  comprehensive_comparison_test.py  debug_gpt52.py  genie_comparison_test.py  hackathon_demo.py  import_to_phoenix.py  live_e2e_test.py  phoenix_traced_demo.py  preflight_check.py  production_ready_demo.py  seed_traffic.py  start_phoenix.py  test_models.py  test_reasoning_tokens.py  test_trace_fix.py  unified_e2e_demo.py
src/shadow_optic/: __init__.py  activities.py  agentic_policy.py  analytics.py  api.py  cli.py  decision_engine.py  dspy_optimizer.py  evaluator.py  model_registry.py  models.py  observability.py  sampler.py  templates.py  watchdog.py  worker.py  workflows.py
src/shadow_optic/p2_enhancements/: __init__.py  ab_graduation.py  cost_predictor.py  guardrail_tuner.py
tests/: __init__.py  conftest.py  test_ab_graduation.py  test_activities.py  test_agentic_integration.py  test_agentic_policy.py  test_cost_predictor.py  test_decision_engine.py  test_dspy_optimizer.py  test_evaluator.py  test_guardrail_tuner.py  test_integration.py  test_sampler.py  test_watchdog.py  test_workflows.py
